--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-          <a href="#" class="navbar-brand">ClientML-Sandbox</a>
+          <a href="index.html" class="navbar-brand">ClientML-Sandbox</a>
           <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,6 +31,24 @@
           </div>
       </div>
     </nav>
+
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Object detection with cocoSSD</h2>
+        <!--<p>???</p>-->
+        <p>
+          <a class="btn btn-warning" href="od.html" role="button"> View details »</a>
+        </p>
+      </div>
+      <div class="col-md-8">
+        <h2>QnA with mobileBERT</h2>
+        <!--<p>???</p>-->
+        <p>
+          <a class="btn btn-warning" href="qna.html" role="button"> View details »</a>
+        </p>
+      </div>
+      <hr>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
