--- a/od.html
+++ b/od.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">ClientML-Sandbox</a>
+            <a href="index.html" class="navbar-brand">ClientML-Sandbox</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-    </nav>
+      </nav>
 
     <h2>Object detection with cocoSSD</h2>
     
