--- a/qna.html
+++ b/qna.html
@@ -34,10 +34,12 @@
     <div>
         <h3>Context (you can paste your own content in the text area)</h3>
         <textarea id='context' rows="20" cols="120">BTS (Korean: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a South Korean boy band that was formed in 2010 and debuted in 2013 under Big Hit Entertainment.[5] The septet—consisting of members Jin, Suga, J-Hope, RM, Jimin, V, and Jungkook—co-writes and co-produces much of their own output. Originally a hip hop group, their musical style has evolved to include a wide range of genres. Their lyrics, often focused on personal and social commentary, touch on the themes of mental health, troubles of school-age youth and coming of age, loss, the journey towards loving oneself, and individualism. Their work also often references literature and psychological concepts and includes an alternative universe storyline. After debuting in 2013 with their single album 2 Cool 4 Skool, BTS released their first Korean-language studio album, Dark & Wild, and Japanese-language studio album, Wake Up, in 2014. The group's second Korean studio album, Wings (2016), was their first to sell one million copies in South Korea. By 2017, BTS crossed into the global music market, leading the Korean Wave into the United States and breaking numerous sales records. They became the first Korean group to receive a certification from the Recording Industry Association of America (RIAA) for their single "Mic Drop", as well as the first Korean act to top the US Billboard 200 with their studio album Love Yourself: Tear (2018). BTS became one of the few groups since the Beatles to earn four US number-one albums in less than two years, and Love Yourself: Answer (2018) was the first Korean album certified platinum by the RIAA. In 2020, BTS became the first all-South Korean act to reach number one on the Billboard Global 200 and US Billboard Hot 100 with their Grammy-nominated single "Dynamite". Their follow-up releases "Savage Love", "Life Goes On", "Butter", and "Permission to Dance" made BTS the fastest act to accumulate five US number-one singles since Michael Jackson. </textarea>
-        <h3>Question</h3>
-        <input type=text id="question" size="50" value="What is their second studio album?"> <button type="button" class="btn btn-success" id="search">Search</button>
-        <h3>Answers</h3>
-        <div id='answer'></div>
+        <section id="demos" class="invisible">
+          <h3>Question</h3>
+          <input type=text id="question" size="50" value="What is their second studio album?"> <button type="button" class="btn btn-success" id="search">Search</button>
+          <h3>Answers</h3>
+          <div id='answer'></div>
+        </section>
     </div>
     <h4>Reference</h4>
     <p> [1] <a href="https://github.com/tensorflow/tfjs-models/tree/master/qna" target="_blank" rel="noopener noreferrer"> https://github.com/tensorflow/tfjs-models/tree/master/qna</a></p>
