feat: add loading

--- a/od.html
+++ b/od.html
@@ -31,7 +31,9 @@
       </nav>
 
     <h2>Object detection with cocoSSD</h2>
-    
+    <section id="loading">
+      <p> Loading models...</p>
+    </section>
     <section id="demos" class="invisible">
         <div id="liveView" class="videoView">
             <button type="button" class="btn btn-success" id="webcamButton">Enable Webcam</button>
